added ?cli=pass, cli client, some styling twaks

--- a/tailwind/src/output.css
+++ b/tailwind/src/output.css
@@ -782,6 +782,11 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
 .pb-16 {
   padding-bottom: 4rem;
 }
