--- a/tailwind/src/output.css
+++ b/tailwind/src/output.css
@@ -580,8 +580,16 @@ video {
   position: fixed;
 }
 
+.absolute {
+  position: absolute;
+}
+
 .relative {
   position: relative;
+}
+
+.bottom-0 {
+  bottom: 0px;
 }
 
 .bottom-4 {
@@ -596,12 +604,12 @@ video {
   left: 1rem;
 }
 
-.right-4 {
-  right: 1rem;
+.right-10 {
+  right: 2.5rem;
 }
 
-.m-4 {
-  margin: 1rem;
+.right-4 {
+  right: 1rem;
 }
 
 .mx-auto {
@@ -631,24 +639,12 @@ video {
   margin-left: 0.5rem;
 }
 
-.mt-\[30vh\] {
-  margin-top: 30vh;
-}
-
-.ml-4 {
-  margin-left: 1rem;
-}
-
 .mr-4 {
   margin-right: 1rem;
 }
 
-.mr-8 {
-  margin-right: 2rem;
-}
-
-.mr-6 {
-  margin-right: 1.5rem;
+.mt-\[30vh\] {
+  margin-top: 30vh;
 }
 
 .block {
@@ -692,6 +688,10 @@ video {
   height: 100vh;
 }
 
+.max-h-40 {
+  max-height: 10rem;
+}
+
 .min-h-screen {
   min-height: 100vh;
 }
@@ -704,20 +704,12 @@ video {
   width: 3.5rem;
 }
 
-.w-16 {
-  width: 4rem;
-}
-
 .w-2\/5 {
   width: 40%;
 }
 
-.w-48 {
-  width: 12rem;
-}
-
-.w-52 {
-  width: 13rem;
+.w-56 {
+  width: 14rem;
 }
 
 .w-8 {
@@ -728,8 +720,16 @@ video {
   width: 2.25rem;
 }
 
+.w-\[4\.2rem\] {
+  width: 4.2rem;
+}
+
 .w-\[50\%\] {
   width: 50%;
+}
+
+.w-\[60\%\] {
+  width: 60%;
 }
 
 .w-\[95\%\] {
@@ -740,64 +740,12 @@ video {
   width: 100%;
 }
 
-.w-1 {
-  width: 0.25rem;
+.cursor-pointer {
+  cursor: pointer;
 }
 
-.w-\[\] {
-  width: ;
-}
-
-.w-\[4\.\] {
-  width: 4.;
-}
-
-.w-\[4\.2rem\] {
-  width: 4.2rem;
-}
-
-.w-5 {
-  width: 1.25rem;
-}
-
-.w-4 {
-  width: 1rem;
-}
-
-.w-\[60\] {
-  width: 60;
-}
-
-.w-\[60\%\] {
-  width: 60%;
-}
-
-.w-\[96\] {
-  width: 96;
-}
-
-.w-\[96\%\] {
-  width: 96%;
-}
-
-.w-\[100\] {
-  width: 100;
-}
-
-.w-\[40\] {
-  width: 40;
-}
-
-.w-\[40\%\] {
-  width: 40%;
-}
-
-.w-\[100\%\] {
-  width: 100%;
-}
-
-.w-56 {
-  width: 14rem;
+.scroll-m-2 {
+  scroll-margin: 0.5rem;
 }
 
 .flex-col {
@@ -832,6 +780,10 @@ video {
   overflow-x: scroll;
 }
 
+.overflow-y-scroll {
+  overflow-y: scroll;
+}
+
 .scroll-smooth {
   scroll-behavior: smooth;
 }
@@ -852,17 +804,16 @@ video {
   border-radius: 9999px;
 }
 
+.rounded-sm {
+  border-radius: 0.125rem;
+}
+
 .border {
   border-width: 1px;
 }
 
 .border-b {
   border-bottom-width: 1px;
-}
-
-.border-emerald-300 {
-  --tw-border-opacity: 1;
-  border-color: rgb(110 231 183 / var(--tw-border-opacity));
 }
 
 .border-emerald-600 {
@@ -873,6 +824,16 @@ video {
 .border-slate-100 {
   --tw-border-opacity: 1;
   border-color: rgb(241 245 249 / var(--tw-border-opacity));
+}
+
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-emerald-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(4 120 87 / var(--tw-bg-opacity));
 }
 
 .bg-gray-100 {
@@ -888,17 +849,8 @@ video {
   background-color: inherit;
 }
 
-.bg-red-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 202 202 / var(--tw-bg-opacity));
-}
-
 .fill-amber-600 {
   fill: #d97706;
-}
-
-.fill-blue-600 {
-  fill: #2563eb;
 }
 
 .fill-inherit {
@@ -909,24 +861,21 @@ video {
   fill: #0284c7;
 }
 
-.fill-emerald-600 {
-  fill: #059669;
-}
-
-.fill-emerald-700 {
-  fill: #047857;
-}
-
-.fill-emerald-400 {
-  fill: #34d399;
-}
-
-.fill-emerald-300 {
-  fill: #6ee7b7;
-}
-
 .p-1 {
   padding: 0.25rem;
+}
+
+.p-2 {
+  padding: 0.5rem;
+}
+
+.p-3 {
+  padding: 0.75rem;
+}
+
+.px-0 {
+  padding-left: 0px;
+  padding-right: 0px;
 }
 
 .px-2 {
@@ -957,11 +906,6 @@ video {
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
-}
-
-.px-0 {
-  padding-left: 0px;
-  padding-right: 0px;
 }
 
 .pb-16 {
@@ -998,6 +942,11 @@ video {
   line-height: 1.75rem;
 }
 
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
@@ -1009,6 +958,11 @@ video {
 
 .text-inherit {
   color: inherit;
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .shadow-2xl {
@@ -1040,6 +994,29 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+
+.noscrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+
+.noscrollbar {
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
+
+.hover\:fill-amber-500:hover {
+  fill: #f59e0b;
+}
+
+.hover\:fill-sky-400:hover {
+  fill: #38bdf8;
+}
+
 .hover\:underline:hover {
   text-decoration-line: underline;
 }
@@ -1047,6 +1024,10 @@ video {
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
+}
+
+.group:hover .group-hover\:block {
+  display: block;
 }
 
 :is(.dark .dark\:border-emerald-300) {
@@ -1069,6 +1050,11 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
+:is(.dark .dark\:bg-emerald-300) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(110 231 183 / var(--tw-bg-opacity));
+}
+
 :is(.dark .dark\:bg-gray-900) {
   --tw-bg-opacity: 1;
   background-color: rgb(17 24 39 / var(--tw-bg-opacity));
@@ -1082,16 +1068,21 @@ video {
   background-color: rgb(17 24 39 / 0.9);
 }
 
-:is(.dark .dark\:fill-blue-300) {
-  fill: #93c5fd;
+:is(.dark .dark\:fill-amber-400) {
+  fill: #fbbf24;
+}
+
+:is(.dark .dark\:fill-emerald-300) {
+  fill: #6ee7b7;
 }
 
 :is(.dark .dark\:fill-sky-300) {
   fill: #7dd3fc;
 }
 
-:is(.dark .dark\:fill-emerald-300) {
-  fill: #6ee7b7;
+:is(.dark .dark\:text-black) {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 :is(.dark .dark\:text-gray-50) {
@@ -1104,13 +1095,33 @@ video {
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
 
+:is(.dark .dark\:hover\:fill-amber-600:hover) {
+  fill: #d97706;
+}
+
+:is(.dark .dark\:hover\:fill-sky-600:hover) {
+  fill: #0284c7;
+}
+
 @media (min-width: 768px) {
-  .md\:w-2\/5 {
-    width: 40%;
+  .md\:ml-2 {
+    margin-left: 0.5rem;
+  }
+
+  .md\:mr-4 {
+    margin-right: 1rem;
+  }
+
+  .md\:max-h-64 {
+    max-height: 16rem;
   }
 
   .md\:w-3\/4 {
     width: 75%;
+  }
+
+  .md\:w-full {
+    width: 100%;
   }
 
   .md\:py-2 {
