--- a/tailwind/src/output.css
+++ b/tailwind/src/output.css
@@ -643,10 +643,6 @@ video {
   margin-right: 1rem;
 }
 
-.mt-\[30vh\] {
-  margin-top: 30vh;
-}
-
 .block {
   display: block;
 }
@@ -682,10 +678,6 @@ video {
 
 .h-full {
   height: 100%;
-}
-
-.h-screen {
-  height: 100vh;
 }
 
 .max-h-40 {
@@ -928,15 +920,6 @@ video {
   text-align: left;
 }
 
-.text-center {
-  text-align: center;
-}
-
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
@@ -1127,6 +1110,11 @@ video {
   .md\:py-2 {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
+  }
+
+  .md\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 
   .md\:shadow-none {
