idk vai don't ask

--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -643,6 +643,34 @@ video {
   width: 100vw;
 }
 
+.w-\[\] {
+  width: ;
+}
+
+.w-\[60vh\] {
+  width: 60vh;
+}
+
+.w-\[60vw\] {
+  width: 60vw;
+}
+
+.w-\[80vw\] {
+  width: 80vw;
+}
+
+.w-\[vw\] {
+  width: vw;
+}
+
+.w-\[7vw\] {
+  width: 7vw;
+}
+
+.w-\[75vw\] {
+  width: 75vw;
+}
+
 .flex-row {
   flex-direction: row;
 }
