--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -624,6 +624,22 @@ video {
   bottom: 4rem;
 }
 
+.bottom-6 {
+  bottom: 1.5rem;
+}
+
+.bottom-10 {
+  bottom: 2.5rem;
+}
+
+.bottom-2 {
+  bottom: 0.5rem;
+}
+
+.bottom-20 {
+  bottom: 5rem;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -905,6 +921,14 @@ video {
 
   .md\:left-0 {
     left: 0px;
+  }
+
+  .md\:bottom-4 {
+    bottom: 1rem;
+  }
+
+  .md\:left-4 {
+    left: 1rem;
   }
 
   .md\:block {
